// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lets you make columns of different widths 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hWapkf"
    sizes="3,2"
  >
    <div>
      Here's a child
    </div>
    <div>
      Here's another
    </div>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hgMGHa"
  >
    <div>
      Here's a child
    </div>
    <div>
      Here's another
    </div>
  </div>
</DocumentFragment>
`;
